# terminus

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  PROJECT.md  README.md  SECURITY.md  codecov.yml  docker-compose.yml  prometheus.yml  pyproject.toml  wait-for-redis.sh
.github/workflows/: ci.yml
bench/: corpus_benign.yaml  fetch.py  models.py  run_agent.py  run_corpus.py  run_static.py  score.py
bench/scenarios/: scenarios.yaml
docs/: architecture.md  audit-to-siem.md  configuration.md  integration.md  operations.md  security-compliance-spec.md
docs/capabilities/: agent-identity.md  audit.md  graduated-autonomy.md  mcp-enforcement-point.md  policy-and-whitelists.md  remediation.md  signature-flywheel.md
dogfood/: README.md  compose.yml  run.py  seed.sql
examples/: agents.yaml  policy.yaml  schema_whitelist.yaml
grafana/provisioning/dashboards/: dashboards.yml  terminus.json
grafana/provisioning/datasources/: datasource.yml
pov/: README.md  __init__.py  audit_check.py  corpus.yaml  corpus_snowflake.yaml  corrector.py  functional.py  harness.py  latency.py  loader.py  models.py  report.py
prometheus/: alerts.yml
src/terminus/: __init__.py  main.py  rewrite.py
src/terminus/audit/: audit_logger.py  verify.py
src/terminus/auth/: __init__.py  __main__.py  dependency.py  registry.py  tokens.py
src/terminus/config/: governance.py  settings.py  worker_guard.py
src/terminus/interceptor/: router.py
src/terminus/mcp/: __init__.py  __main__.py  approvals.py  audit.py  decider.py  executor.py  grants.py  server.py
src/terminus/observability/: metrics.py
tests/: conftest.py  test_agent_trust.py  test_audit_schema_versions.py  test_audit_verify.py  test_ci_hygiene.py  test_dockerfile.py  test_docs_disable.py  test_env_defaults.py  test_f10c_dialect.py  test_failure_signal_counters.py  test_governance_reload.py  test_governance_trust_diff.py  test_intercept.py  test_intercept_matching.py  test_intercept_signature.py  test_jwt_expiry.py  test_logging_stream.py  test_metadata_bounds.py  test_observe_http.py  test_parser_signature_facts.py  test_policy_limit_warning.py  test_pov_harness_corpus_flag.py  test_remediation_header.py  test_settings_validation.py  test_signature_build.py  test_signature_composite_emitter.py  test_signature_emitter.py  test_signature_facts_chokepoint.py  test_signature_gate.py  test_signature_intel_settings.py  test_signature_matcher.py  test_signature_model.py  test_signature_outbound_buffer.py  test_signature_outbound_metrics.py  test_signature_outbound_payload.py  test_signature_outbound_privacy.py  test_signature_outbound_settings.py  test_signature_outbound_shipper.py  test_signature_overrides.py  test_signature_privacy.py  (+13 more)
tests/bench/: conftest.py  test_models.py  test_run_corpus.py  test_run_static.py  test_scenarios.py  test_score.py
tests/config/: test_settings_reveal.py
tests/mcp/: test_approvals.py  test_audit.py  test_decider.py  test_executor.py  test_grants.py  test_integration_postgres.py  test_main.py  test_no_bypass.py  test_observe_mode.py  test_server.py  test_settings.py
tests/pov/: test_audit_check.py  test_corpus_integrity.py  test_corrector.py  test_functional.py  test_harness_smoke.py  test_latency.py  test_loader.py  test_report.py
(+19 files in other folders)
